--- a/react_starter/src/components/video/video.css
+++ b/react_starter/src/components/video/video.css
@@ -9,6 +9,7 @@ body {
     background-color: #333;
     color: #fff;
     font-family: Arial, Helvetica, sans-serif;
+    padding: 2vh;
 }
 .results-input-container {
     height: 100%;
@@ -31,7 +32,7 @@ body {
     width: 30%;
 }
 .video-container {
-    height: 100vh;
+    height: 96vh;
 }
 .row.results-input-container {
     margin-left: 0;
