--- a/react_starter/src/components/panel/panel.css
+++ b/react_starter/src/components/panel/panel.css
@@ -11,10 +11,12 @@ body {
 .row {
     height: 50%;
     position: relative;
-    right: -16vh;
 }
 .panels {
     border: 1px solid #000;
     height: 100%;
-    line-height: 45vh;
+}
+.video {
+    background: #333;
+    z-index: 0;
 }
