--- a/react_starter/src/components/video/video.css
+++ b/react_starter/src/components/video/video.css
@@ -1,22 +1,34 @@
-*{
-    box-sizing: border-box;
-}
-body {
-    margin: 0;
-    padding: 0;
-}
 .main {
-    background-color: #333;
     color: #fff;
     font-family: Arial, Helvetica, sans-serif;
     padding: 2vh;
+    width: 100%;
+    height: 100%
 }
-.results-input-container {
+.search-button-input {
+    padding-top: 1vh;
+}
+.vid-container {
+    z-index: 1;
+}
+.video-wrapper#video-wrapper {
     height: 100%;
-    position: relative;
+}
+.video-container#video-container {
+    height: 100%;
 }
 .video-items {
     list-style-type: none;
+}
+button.close {
+    color: #fff;
+    position: relative;
+    top: -3vh;
+    left: 4vh;
+}
+.results-container {
+    height: 100%;
+    z-index: 3;
 }
 .results-container li,
 .results-container button {
@@ -26,15 +38,17 @@ body {
     margin-bottom: 1vh;
     margin-top: 1vh;
 }
-.results-container {
+.results-container.sidebar {
     position: absolute;
     top: 0;
-    width: 30%;
-}
-.video-container {
-    height: 96vh;
+    right: 2vh;
+    background-color: #000;
+    width: 50%;
 }
 .row.results-input-container {
     margin-left: 0;
     margin-right: 0;
+}
+.hamburger {
+    position: absolute;
 }
