--- a/react_starter/src/components/video/video.css
+++ b/react_starter/src/components/video/video.css
@@ -3,7 +3,8 @@
     font-family: Arial, Helvetica, sans-serif;
     padding: 2vh;
     width: 100%;
-    height: 100%
+    height: 100%;
+    overflow:hidden;
 }
 .search-button-input {
     padding-top: 1vh;
@@ -27,9 +28,11 @@ button.close {
     left: 6vh;
 }
 .results-container {
+    width: 100%;
     height: 100%;
     z-index: 3;
-    overflow: scroll;
+    overflow: auto;
+    transition: 0.5s;
 }
 .results-container li,
 .results-container button {
