--- a/client/src/assets/css/panel.css
+++ b/client/src/assets/css/panel.css
@@ -9,12 +9,13 @@ body {
     height: 100vh;
 }
 .row {
-    height: 50%;
+    height: 50vh;
     position: relative;
 }
 .panels {
     border: 1px solid #000;
     height: 100%;
+    width: 100%;
 }
 .video {
     background: #333;
