Removed react sortable panel library and added split pane library

--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -3,7 +3,7 @@
     src: url(../fonts/blocky.ttf);
 }
 
-body {
+/* body {
     margin: 2% 4%;
 }
 
@@ -14,4 +14,4 @@ body {
     font-size: 25px;
     padding: 50px;
     text-align: center;
-}
+} */
