--- a/client/src/assets/css/notes.css
+++ b/client/src/assets/css/notes.css
@@ -1,4 +1,9 @@
 .notesPanel {
     width: 100%;
+    height: 100%;
     margin-bottom: 2%;
+}
+.quill {
+    height: 100%;
+    overflow: hidden;
 }
