--- a/client/src/assets/css/landing-page.css
+++ b/client/src/assets/css/landing-page.css
@@ -1,43 +1,71 @@
 body {
     box-sizing: border-box;
 }
+.top-background-layer {
+    background-color: #000;
+    opacity: 0.4;
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+}
+.main-login-container {
+    position: relative;
+}
 .landing-page-container {
     text-align: center;
     height: 100vh;
+    background-color: #222C3A;
 }
 .landing-page-container h1,
 .landing-page-container h2 {
     margin: 0;
-    line-height: 25px;
+    color: #fff;
 }
 .landing-page-container h1 {
     line-height: 60px;
-    text-shadow: 2px 2px 1px #000;
     letter-spacing: 0.3vmin;
 }
 .landing-page-container h2 {
     font-weight: 100;
 }
 .login-container {
-    border: 1px solid #000;
-    width: 72vw;
+    width: 80%;
     height: 56vh;
     margin: 0 auto;
     position: relative;
-    top: 6vh;
-    border-radius: 2px;
-    box-shadow: 2px 2px 10px #000;
+    top: 7vh;
+    box-shadow: 0 4px 2px -2px darkorange;
+    border-radius: 5px;
+}
+.blur {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.38);
+    z-index: 0;
+}
+.title-container h1 {
+    line-height: 8vh;
 }
 .google-div,
 .info {
     width: 50%;
     height: 100%;
     display: inline-block;
-    border: 1px solid #000;
     vertical-align: top;
+    color: #fff;
+}
+.google-div {
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
 .info {
-    background-color: #fff;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
 }
 .info h3 {
     position: relative;
@@ -45,18 +73,16 @@ body {
     font-size: 4vmin;
 }
 .google-div {
-    background-color: #29bf89;
     color: #fff;
 }
 .login-info {
     position: relative;
-    top: 10%;
+    top: 30%;
 }
 .login-info h3 {
     font-size: 3vmin
 }
 .login-info img {
-    margin-top: 12px;
     display: block;
     margin: 0 auto;
 }
@@ -68,27 +94,30 @@ body {
     width: 70%;
     margin: 0 auto;
     font-size: 3vmin;
-
+}
+.item-list .glyphicon {
+    color: #31C3E7;
+    font-size: 2.8vmin;
+    display: inline-block;
+    margin-right: 10px;
 }
 .item-list li:nth-child(3) {
-    font-size: 2vmin;
+    font-size: 2.5vmin;
 }
-.item-list li {
-    border-bottom: 2px solid darkorange; 
-    list-style-type: circle;
+.item-text {
+    display: inline-block;
 }
 .flex {
-    color: darkorange;
+    color: #31C3E7;
 }
 .user-circle {
     border: 3px solid #fff;
     border-radius: 50%;
 }
-.glyphicon.glyphicon-user {
-    border: 2px solid #fff;
-    border-radius: 50%;
-    width: 7vw;
-    height: 8vh;
-    line-height: 7vh;
-    font-size: 4vmin;
+.title-container {
+    position: relative;
+    top: 3vh;
+}
+.title-container {
+    line-height: 9vh;
 }
