made editor scrollable and added some styling

--- a/client/src/assets/css/panel.css
+++ b/client/src/assets/css/panel.css
@@ -56,3 +56,8 @@ body {
 .Resizer.disabled:hover {
   border-color: transparent;
 }
+
+.Pane1 {
+    overflow-y: scroll;
+    overflow-wrap: break-word;
+}
