--- a/client/src/assets/css/notes.css
+++ b/client/src/assets/css/notes.css
@@ -1,25 +1,37 @@
 .notes-component {
-    margin: 0;
-    border: 0;
-    padding: 10px;
-}
-
-.notesTitle {
-    margin-top: 0;
+    position: absolute;
+    width: 100%;
 }
 
 .toolbar {
-    margin-left: -5px;
+    position: fixed;
+    width: 90%;
+    height: 75px;
+    padding: 5px 0 0 15px;
+    background-color: #31C3E7;
     text-align: left;
+    line-height: 45px;
+    z-index: 1;
 }
 
 .editor {
-    margin-top: 20px;
+    margin-top: 90px;
     text-align: left;
+    padding-left: 10px;
 }
 
 .search-box {
-    float: right;
-    font-size: 18px;
+    margin-top: -12px;
+    margin-left: -5px;
+    line-height: 23px;
+
+}
+
+input {
     border-radius: 5px;
+    padding-left: 5px;
+}
+
+.material-icons {
+    color: white;
 }
