--- a/client/src/assets/css/video.css
+++ b/client/src/assets/css/video.css
@@ -1,13 +1,27 @@
 .main {
-    color: #fff;
+    color: #000;
     font-family: Arial, Helvetica, sans-serif;
     padding: 2vh;
     width: 100%;
     height: 100%;
     overflow:hidden;
 }
+.opacity {
+    position: absolute;
+    top: 0; 
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    display: block;
+    z-index: 1;
+    opacity: 0.6;
+}
 .search-button-input {
     padding-top: 1vh;
+}
+#search-input-container.search-button-input {
+    float: right;
 }
 .vid-container {
     z-index: 1;
@@ -32,27 +46,30 @@ button.close {
     height: 100%;
     z-index: 3;
     overflow: auto;
-    transition: 0.5s;
+    transition: 0.4s;
 }
 .results-container li,
 .results-container button {
     display: inline-block;
 }
-.result-item {
-    margin-bottom: 1vh;
-    margin-top: 1vh;
-}
 .results-container.sidebar {
     position: absolute;
     top: 0;
     right: 0;
-    background-color: #000;
+    background-color: #fff;
     width: 65%;
+    border-left: 1px solid #e4e4e4;
 }
 .row.results-input-container {
     margin-left: 0;
     margin-right: 0;
 }
-.hamburger {
+#search {
     position: absolute;
+    color: #fff;
+    right: 20px;
+    top: 15px;
+}
+.video-parent-panel {
+    height: 100%;
 }
