Added icon to logout button and absolutely positioned to right, still need to work on button to save panel dimensions

--- a/client/src/assets/css/panel.css
+++ b/client/src/assets/css/panel.css
@@ -71,3 +71,9 @@ body {
     overflow-y: scroll;
     overflow-wrap: break-word;
 }
+.app-title {
+    margin: 0;
+}
+.container-fluid {
+    padding: 0;
+}
