--- a/client/src/assets/css/slides.css
+++ b/client/src/assets/css/slides.css
@@ -1,3 +1,11 @@
+.slides-container {
+  width: 100vw;
+}
+
+.slides-div {
+  height: 86%
+}
+
 .slides-iframe
 {
   position: relative;
@@ -8,7 +16,7 @@
   z-index: 1;
   width: 100%;
   height: 100%;
-  padding-top: 4em;
+  /* padding-top: 4em; */
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
