--- a/client/src/assets/css/notes.css
+++ b/client/src/assets/css/notes.css
@@ -15,16 +15,15 @@
 }
 
 .editor {
-    margin-top: 90px;
     text-align: left;
     padding-left: 10px;
+    margin-top: 10px;
 }
 
 .search-box {
     margin-top: -12px;
     margin-left: -5px;
     line-height: 23px;
-
 }
 
 .search-input {
@@ -34,4 +33,19 @@
 
 .material-icons {
     color: white;
+}
+
+.saveNotes {
+    float: right;
+    margin-right: 10px;
+    background-color: #fff;
+    color: #31C3E7;
+    font-weight: 600;
+    border-radius: 5px;
+    border: 2px outset lightgrey;
+}
+
+.saveNotes:hover {
+    background-color: #e5e5e5;
+    color: #279cb8;
 }
