used more specific classes so as to not affect other buttons

--- a/client/src/assets/css/login.css
+++ b/client/src/assets/css/login.css
@@ -7,13 +7,13 @@
     z-index: 1;
 }
 
-.btn-sm {
+.logoutBtn {
     background-color: #31C3E7;
     color: #ffffff;
     font-size: 15px;
 }
 
-.btn-sm:hover {
+.logoutBtn:hover {
     background-color: #ffffff;
     border: 2px solid #31C3E7;
     color: #31C3E7;
