--- a/client/src/assets/css/panel.css
+++ b/client/src/assets/css/panel.css
@@ -100,8 +100,6 @@ body {
     border: 1px solid #31C3E7;
     border-radius: 3px;
     margin-right: 5px;
-    height: 30px;
-    width: 30px;
     font-size: 18px;
     margin-top: 5px;
 }
@@ -110,4 +108,8 @@ body {
     background-color: #ffffff;
     border: 2px solid #31C3E7;
     color: #31C3E7;
+}
+.panel_div {
+    width: 88.5%;
+    height: 80vh;
 }
