--- a/client/src/assets/css/video-add-modal.css
+++ b/client/src/assets/css/video-add-modal.css
@@ -3,7 +3,7 @@
     height: 100%;
     position: absolute;
     top: 0;
-    left: 5%;
+    left: 0;
     background-color: rgba(0,0,0,0.7);
     z-index: 2000;
 }
