--- a/client/src/assets/css/notes.css
+++ b/client/src/assets/css/notes.css
@@ -1,23 +1,46 @@
+.notes-parent-panel {
+    height: 100%;
+    overflow: scroll;
+    background-image: linear-gradient(0deg, transparent 24%, rgba(177, 235, 249, 1) 25%, rgba(177, 235, 249, 1) 26%, transparent 27%, transparent 74%, rgba(177, 235, 249, 1) 75%, rgba(177, 235, 249, 1) 76%, transparent 77%, transparent);
+    background-size:50px 50px;
+    background-attachment: local;
+}
+
 .notes-component {
-    position: absolute;
     width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
 }
 
 .toolbar {
-    position: relative;
     width: 100%;
     height: 75px;
+    top: 0;
+    bottom: 0;
     padding: 5px 0 0 15px;
     background-color: #31C3E7;
     text-align: left;
     line-height: 45px;
     z-index: 1;
+    position: absolute;
+    right: 0;
+    left: 0;
+}
+
+.stylingButtons {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
 }
 
 .editor {
+
     text-align: left;
     padding-left: 10px;
-    margin-top: 10px;
+    margin-top: 93px;
+    line-height: 25px;
+    /*font-size: 2vh;*/
 }
 
 .search-box {
@@ -42,10 +65,11 @@
     color: #31C3E7;
     font-weight: 600;
     border-radius: 5px;
-    border: 2px outset lightgrey;
+    box-shadow: 3px 3px #999;
 }
 
-.saveNotes:hover {
-    background-color: #e5e5e5;
-    color: #279cb8;
+.saveNotes:active {
+    box-shadow: 2px 2px #999;
+    border: none;
+    transform: translateY(4px);
 }
