--- a/client/src/assets/css/panel.css
+++ b/client/src/assets/css/panel.css
@@ -66,9 +66,9 @@ body {
     left: 1.5% !important;
 }
 
-.panel_div{
+/* .panel_div{
     height: 90vh;
-}
+} */
 
 .container-fluid {
     padding: 0;
