--- a/client/src/assets/css/video.css
+++ b/client/src/assets/css/video.css
@@ -31,6 +31,11 @@
 .video-container#video-container {
     height: 100%;
 }
+
+.video-container#video-container .row form{
+    width: 80%;
+    display: inline-block;
+}
 .video-items {
     list-style-type: none;
 }
@@ -90,7 +95,5 @@ button.close {
     border:none;
 }
 .left-menu-button {
-    position: absolute;
-    right: 0;
-    top: 1px;
+
 }
