--- a/client/src/assets/css/panel.css
+++ b/client/src/assets/css/panel.css
@@ -80,6 +80,12 @@ body {
     margin: 0 0 0 10px;
     padding: 0 10px;
     line-height: 40px;
+    background-image: url('/paperimages/Book+top+view2.jpg');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    width: 87.5%;
+    padding-left: 5%;
+    box-shadow: 0 4px 8px 0px rgba(0, 0, 0, 0.2), 0 6px 20px 5px rgba(0, 0, 0, 0.19);
 }
 
 .panelOptions {
