--- a/client/src/assets/css/navbar.css
+++ b/client/src/assets/css/navbar.css
@@ -1,3 +1,7 @@
+a {
+    color: white;
+}
+
 .nav_binder, .nav_tab, .nav_page {
     display: inline-block;
     margin: 0;
@@ -11,6 +15,8 @@
     height: 100vh;
     box-shadow: 5px 0 10px 1px rgba(0, 0, 0, 0.15);
     #border: solid 2px black;
+
+    background-color: #6d7993;
 }
 
 ul {
