--- a/client/src/assets/css/video.css
+++ b/client/src/assets/css/video.css
@@ -4,6 +4,8 @@
     width: 100%;
     height: 100%;
     overflow:hidden;
+
+    background-color: #d5d5d5;
 }
 .opacity {
     position: absolute;
@@ -96,4 +98,22 @@ button.close {
 }
 .left-menu-button {
 
+}
+
+.btn {
+    border: 1px solid black;
+    text-align: center;
+    box-sizing: border-box;
+    background-color: #d5d5d5;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    cursor: pointer;
+}
+
+.btn:hover{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.7), 0 6px 20px 0 rgba(0, 0, 0, 0.55);
+    background-color: ghostwhite;
+}
+
+.glyphicon {
+    color: black;
 }
