--- a/client/src/assets/css/login.css
+++ b/client/src/assets/css/login.css
@@ -7,7 +7,7 @@
     z-index: 1;
 }
 
-.logoutBtn {
+/* .logoutBtn {
     background-color: #31C3E7;
     color: #ffffff;
     font-size: 15px;
@@ -17,4 +17,4 @@
     background-color: #ffffff;
     border: 2px solid #31C3E7;
     color: #31C3E7;
-}
+} */
