--- a/client/src/assets/css/navbar.css
+++ b/client/src/assets/css/navbar.css
@@ -10,7 +10,8 @@
     width: 10%;
     height: 100vh;
     box-shadow: 5px 0 10px 1px rgba(0, 0, 0, 0.15);
-    #border: solid 2px black;
+    /* #border: solid 2px black; */
+    overflow-y:scroll;
 }
 
 ul {
@@ -24,7 +25,7 @@ ul > li {
 }
 
 .contain-tab, .contain-page{
-    #border: 1px solid #000080;
+    /* #border: 1px solid #000080; */
     display: inline-block; 
     margin: 0;
     padding: 0;    
@@ -33,7 +34,7 @@ ul > li {
 }
 
 .contain-page{
-    #border-right: 3px solid #000080;
+    /* #border-right: 3px solid #000080; */
     /*box-shadow: 2px 0px 1px #747474;*/
     margin-left: 1%;
     width: 53%;
@@ -43,7 +44,7 @@ ul > li {
 
 .contain-tab{
     /*border-left: 1px solid #747474;*/
-    #border-right: #ff0000 3px solid;
+    /* #border-right: #ff0000 3px solid; */
     /*background-color: #ccc;*/
     /*background-image: url("../../assets/images/black-linen.png");*/
     /*box-shadow: 2px 0px 1px #454545;*/
@@ -54,9 +55,9 @@ ul > li {
 .nav_binder {
     border: 3px solid #000080;
     border-radius: 3px;
-    #border-bottom: 4px ridge #000080;
+    /* #border-bottom: 4px ridge #000080; */
     background-color: #000080B3;
-    #background-image: url("../../assets/images/concrete-wall-3.png");    
+    /* #background-image: url("../../assets/images/concrete-wall-3.png");     */
     position: relative;
     width: 100%;
     box-shadow: 1px 1.5px .5px #747474;
@@ -67,7 +68,7 @@ ul > li {
     border: 1px solid #747474;
     border-radius: 3px;
     background-color: white;
-    #background-image: url("../../assets/images/concrete-wall-3.png");   
+    /* #background-image: url("../../assets/images/concrete-wall-3.png");    */
     width: 75%;
     height: 80px;
     margin-left: 10%;
@@ -76,7 +77,7 @@ ul > li {
 }
 
 .nav_tab {
-    #border-left: 2px solid red;
+    /* #border-left: 2px solid red; */
     display: inline-block;
     position: absolute;
     top: 110%;
@@ -85,8 +86,8 @@ ul > li {
 }
 
 .nav_page {
-    #border-left: 2px solid lightgreen;
-    #border-right: 2px solid red;
+    /* #border-left: 2px solid lightgreen; */
+    /* #border-right: 2px solid red; */
     display: inline-block; 
     position: absolute;
     top: 1%;
@@ -99,11 +100,11 @@ ul > li {
 }
 
 .binderDiv{
-    #border: 2px solid #000080;
+    /* #border: 2px solid #000080; */
     text-align: left;
     padding-left: 5%;
     padding-top: 5%;
-    #background-color: #ccccff;
+    /* #background-color: #ccccff; */
     font-weight: 600;
     color: black;
 }
@@ -156,7 +157,7 @@ ul > li {
 
 .btn_add {
     border-radius: 20%;
-    #border: 2px solid black;
+    /* #border: 2px solid black; */
     margin-left: 10%;
     margin-top: 0%;  
     margin-right: 2%;
@@ -184,7 +185,7 @@ ul > li {
 
 .delete_btn{
     font-size: 1.5em;
-    #border: solid 1px black;
+    /* #border: solid 1px black; */
     background-color: white;
     border-radius: 100%;
 }
