--- a/client/src/assets/css/video.css
+++ b/client/src/assets/css/video.css
@@ -1,9 +1,9 @@
 .main {
     color: #000;
     font-family: Arial, Helvetica, sans-serif;
-    width: 100%;
     height: 100%;
     overflow:hidden;
+    margin: 0 auto;
 }
 .opacity {
     position: absolute;
@@ -82,6 +82,12 @@ button.close {
     height: 100%;
     text-align: center;
 }
+
+.video-container iframe {
+    width: 95%;
+    height: 100%;
+    margin: 0 auto;
+}
 .video-iframe {
     display: inline-block;
     position: relative;
@@ -90,10 +96,5 @@ button.close {
     left: 0;
     right: 0;
     z-index: 1;
-    width: 95%;
-    height: 84%;
     border:none;
-}
-.left-menu-button {
-
 }
