accordion collapses binders, but doesn't wrap binder when tab is closed. will fix later

--- a/client/src/assets/css/navbar.css
+++ b/client/src/assets/css/navbar.css
@@ -230,11 +230,19 @@ ul > li {
     border-radius: none;
 }
 
-.visible{
+.visibleBinder{
+    display: inline;
+}
+
+.hiddenBinder{
+    display: none;
+}
+
+.visibleTab{
     visibility: visible;
 }
 
-.hidden{
+.hiddenTab{
     visibility: hidden;
 }
 
