Prevented video component from re rendering when button is clicked with empty url input. Modified styles to clean up ui and added materialize class names

--- a/client/src/assets/css/video.css
+++ b/client/src/assets/css/video.css
@@ -13,15 +13,13 @@
     height: 100%;
     background-color: #000;
     display: block;
-    z-index: 1;
+    z-index: 2;
     opacity: 0.6;
 }
 .search-button-input {
     padding-top: 1vh;
 }
-#search-input-container.search-button-input {
-    float: right;
-}
+
 .vid-container {
     z-index: 1;
 }
@@ -29,7 +27,8 @@
     height: 100%;
 }
 .video-container#video-container {
-    height: 100%;
+    height: 80%;
+    padding-bottom: 0;
 }
 
 .video-container#video-container .row form{
@@ -100,15 +99,43 @@ button.close {
 }
 
 .btn {
-    border: 1px solid black;
     text-align: center;
     box-sizing: border-box;
     background-color: #d5d5d5;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     cursor: pointer;
+    margin: 1vmin;
+    line-height: 0;
 }
-
+.btn-success, .btn-primary {
+    padding: 0.1vh 0.5vw;
+}
 .btn:hover{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.7), 0 6px 20px 0 rgba(0, 0, 0, 0.55);
     background-color: ghostwhite;
+}
+#query {
+    padding-left: 8px;
+}
+.list-item-wrapper {
+    padding: 10px 5px;
+}
+.results-btn {
+    padding: 0.1vw 0.2vw;
+}
+.collection {
+    border: none;
+}
+.vid-left-arrow,
+.vid-right-arrow {
+    background-color: #96858F;
+}
+.iframe-wrapper {
+    height: 100%;
+}
+.row {
+    margin-bottom: 0;
+}
+.btn-wrapper {
+    white-space: nowrap;
 }
