--- a/client/src/assets/css/notes.css
+++ b/client/src/assets/css/notes.css
@@ -1,9 +1,6 @@
 .notes-parent-panel {
-    height: 100%;
-    margin-top: 75px;
+    height: 100%;x
     overflow-y: scroll;
-
-
     /*background-image: linear-gradient(0deg, transparent 24%, rgba(177, 235, 249, 1) 25%, rgba(177, 235, 249, 1) 26%, transparent 27%, transparent 74%, rgba(177, 235, 249, 1) 75%, rgba(177, 235, 249, 1) 76%, transparent 77%, transparent);*/
     /*background-size:50px 50px;*/
     /*background-attachment: local;*/
@@ -45,7 +42,7 @@
 
 .toolbar {
     width: 100%;
-    height: 12%;
+    height: 10%;
     position: absolute;
     top: 0;
     right: 0;
@@ -91,9 +88,12 @@
 
 .editor {
     text-align: left;
-    padding-left: 10px;
-    margin-top: 18px;
+    padding-left: 1vmin;
+    padding-top: 2vmin;
     line-height: 25px;
+    height: 90%;
+    position: relative;
+    top: 10%;
 }
 
 /*.search-box {*/
@@ -106,7 +106,6 @@
     width: 250px;
     height: 30px;
     padding-left: 5px;
-    cursor: pointer;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     float: left;
     margin: 0 1% 0 .5%;
@@ -126,7 +125,8 @@
     font-weight: 600;
     /*border-radius: 5px;*/
     /*box-shadow: 3px 3px #999;*/
-
+    position: relative;
+    z-index: 1000;
     float: right;
     margin-right: 1%;
     height: 45%;
