--- a/client/src/assets/css/notes.css
+++ b/client/src/assets/css/notes.css
@@ -1,5 +1,5 @@
 .notes-parent-panel {
-    height: 100%;x
+    height: 100%;
     overflow-y: scroll;
     /*background-image: linear-gradient(0deg, transparent 24%, rgba(177, 235, 249, 1) 25%, rgba(177, 235, 249, 1) 26%, transparent 27%, transparent 74%, rgba(177, 235, 249, 1) 75%, rgba(177, 235, 249, 1) 76%, transparent 77%, transparent);*/
     /*background-size:50px 50px;*/
@@ -11,23 +11,6 @@
     background-color: ghostwhite;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3), inset 0 0 50px rgba(0, 0, 0, 0.3);
 }
-
-/*.notes-parent-panel::-webkit-scrollbar-track {*/
-	/*-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);*/
-	/*border-radius: 10px;*/
-	/*background-color: #ffffff;*/
-/*}*/
-
-/*.notes-parent-panel::-webkit-scrollbar {*/
-	/*width: 2%;*/
-	/*background-color: #ffffff;*/
-/*}*/
-
-/*.notes-parent-panel::-webkit-scrollbar-thumb {*/
-	/*border-radius: 10px;*/
-	/*-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);*/
-	/*background-color: #31C3E7;*/
-/*}*/
 
 .notes-component {
     width: 100%;
@@ -42,7 +25,7 @@
 
 .toolbar {
     width: 100%;
-    height: 10%;
+    height: 12%;
     position: absolute;
     top: 0;
     right: 0;
@@ -55,30 +38,35 @@
     /*background-color: #96858F;*/
     /*text-align: left;*/
     /*line-height: 45px;*/
-    /*z-index: 1;*/
+    z-index: 1;
     box-shadow: 0 5px 5px #999;
+
+    min-height: 100px;
+    min-width: 420px;
 }
 
 .stylingButtons {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    /*justify-content: space-around;*/
-    height: 50%;
-    margin: -5px 0 10px 10px;
+    justify-content: space-between;
+    height: 32px;
+    width: 100%;
 }
 
 .styleSquare {
-    /*width: 40px;*/
-    /*height: 30px;*/
-    width: 9%;
-    height: 100%;
+    width: 40px;
+    height: 30px;
+    padding: 3px 0 0 7px;
+    /*width: 9%;*/
+    /*height: 100%;*/
     border: 1px solid black;
-    text-align: center;
+    /*text-align: center;*/
     box-sizing: border-box;
     background-color: #d5d5d5;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     cursor: pointer;
+    /*margin-right: 4%;*/
 }
 
 .styleSquare:hover{
@@ -87,29 +75,37 @@
 }
 
 .editor {
-    text-align: left;
+    /*text-align: left;*/
     padding-left: 1vmin;
     padding-top: 2vmin;
-    line-height: 25px;
-    height: 90%;
+    /*line-height: 25px;*/
+    height: 80vh;
     position: relative;
-    top: 10%;
+    top: 100px;
 }
 
-/*.search-box {*/
-    /*margin-top: -12px;*/
-    /*margin-left: -5px;*/
+.search-box {
+    margin-top: 12px;
+    /*margin-left: 2%;*/
     /*line-height: 23px;*/
-/*}*/
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+
+
+}
 
 .search-input {
-    width: 250px;
-    height: 30px;
-    padding-left: 5px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    float: left;
-    margin: 0 1% 0 .5%;
+    width: 250px !important;
+    height: 30px !important;
+    padding-left: 5px !important;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19) !important;
+    /*float: left !important;*/
+    /*margin: 10px 1% 0 15px !important;*/
 
+    background-color: white !important;
+    border: 1px solid black;
     /*border-radius: 5px;*/
 
 
@@ -120,27 +116,28 @@
 }
 
 .saveNotes {
-    /*width: 125px;*/
+    width: 125px !important;
+    height: 30px !important;
     /*margin-right: 10px;*/
-    font-weight: 600;
+    font-weight: 600 !important;
     /*border-radius: 5px;*/
     /*box-shadow: 3px 3px #999;*/
-    position: relative;
-    z-index: 1000;
-    float: right;
-    margin-right: 1%;
-    height: 45%;
-    width: 15%;
-    cursor: pointer;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    /*position: relative;*/
+    /*z-index: 1000;*/
+    /*float: right;*/
+    margin-right: 0.9% !important;
+    /*height: 50% !important;*/
+    /*width: 25% !important;*/
+    cursor: pointer !important;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19) !important;
+
 }
 
 .saveNotes:hover{
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.7), 0 6px 20px 0 rgba(0, 0, 0, 0.55);
-    background-color: ghostwhite;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.7), 0 6px 20px 0 rgba(0, 0, 0, 0.55) !important;;
+    background-color: ghostwhite !important;;
 }
 
 .searchSave {
     min-width: 275px;
 }
-
