--- a/client/src/assets/css/video.css
+++ b/client/src/assets/css/video.css
@@ -76,6 +76,7 @@ button.close {
 .video-parent-panel {
     height: 100%;
     width: 100%;
+    background-color: #d5d5d5;
 }
 .video-embed-wrapper {
     height: 100%;
@@ -141,6 +142,7 @@ button.close {
 }
 .slide-out-input {
     transition: 0.2s;
+    background-color: #fff;
 }
 .arrow-container {
     position: absolute;
