--- a/client/src/assets/css/notes.css
+++ b/client/src/assets/css/notes.css
@@ -1,6 +1,6 @@
 .notes-parent-panel {
     height: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
     border-left: 1px solid black;
     box-sizing: border-box;
     background-color: ghostwhite;
