--- a/client/src/assets/css/panel.css
+++ b/client/src/assets/css/panel.css
@@ -126,3 +126,10 @@ body {
 #dashboard-container {
     margin-bottom: 0;
 }
+
+/* label color */
+  /* label underline focus color */
+  .input-field input[type=text]:focus {
+    border-bottom: 1px solid #96858F !important;
+    box-shadow: 0 1px 0 0 #96858F !important;
+  }
