--- a/client/src/assets/css/video.css
+++ b/client/src/assets/css/video.css
@@ -27,8 +27,10 @@
     height: 100%;
 }
 .video-container#video-container {
-    height: 80%;
+    height: 90%;
     padding-bottom: 0;
+    position: relative;
+    top: -10%;
 }
 
 .video-container#video-container .row form{
@@ -110,7 +112,6 @@ button.close {
 }
 .btn:hover{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.7), 0 6px 20px 0 rgba(0, 0, 0, 0.55);
-    background-color: ghostwhite;
 }
 #query {
     padding-left: 8px;
@@ -143,9 +144,28 @@ button.close {
 .slide-out-input {
     transition: 0.2s;
     background-color: #fff;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    z-index: 2000;
+    position: relative;
 }
 .arrow-container {
     position: absolute;
     top: 10px;
     right: 5px;
+    z-index: 3000;
+}
+.vid-left-arrow:hover {
+    background-color: #96858F
+}
+.arrow-container .material-icons {
+    margin-right: 0;
+}
+.btn-success,
+.btn-primary {
+    margin: 0.2vmin;
+    position: relative;
+    top: 1vh;
+}
+.vid-right-arrow:hover {
+    background-color: #96858F;
 }
