Added pointer cursor on arrow container

--- a/client/src/assets/css/video.css
+++ b/client/src/assets/css/video.css
@@ -153,6 +153,7 @@ button.close {
     top: 10px;
     right: 5px;
     z-index: 3000;
+    cursor: pointer;
 }
 .vid-left-arrow:hover {
     background-color: #96858F
