--- a/client/src/assets/css/video.css
+++ b/client/src/assets/css/video.css
@@ -64,6 +64,7 @@ button.close {
     background-color: #fff;
     width: 100%;
     border-left: 1px solid #e4e4e4;
+    z-index: 5000;
 }
 .row.results-input-container {
     margin-left: 0;
