basic layout complete

--- a/client/src/assets/css/panel.css
+++ b/client/src/assets/css/panel.css
@@ -123,9 +123,9 @@ body {
     width: 88.5%;
     height: 95vh;
 }
-#dashboard-container {
+/* #dashboard-container {
     margin-bottom: 0;
-}
+} */
 
 /* label color */
   /* label underline focus color */
