--- a/client/src/assets/css/login.css
+++ b/client/src/assets/css/login.css
@@ -1,11 +1,11 @@
-.logout {
+/* .logout {
     position: absolute;
     left: -28px;
     bottom: 10px;
     text-align: right;
     width: 10%;
     z-index: 1;
-}
+} */
 
 /* .logoutBtn {
     background-color: #31C3E7;
@@ -21,5 +21,5 @@
 
 .logoImage {
     height: 100px;
-    padding: 0 0 10px 35px;
+    #padding: 0 0 10px 35px;
 }
