--- a/client/src/assets/css/navbar.css
+++ b/client/src/assets/css/navbar.css
@@ -8,16 +8,13 @@ a {
     padding: 0;
 }
 
-.navbar{
+.navbar.s2{
     margin: 0;
     padding: 0;
     width: 10%;
     height: 100vh;
     box-shadow: 5px 0 10px 1px rgba(0, 0, 0, 0.15);
-    /* #border: solid 2px black; */
     overflow-y:scroll;
-    #border: solid 2px black;
-
     background-color: #6d7993;
 }
 
@@ -48,8 +45,8 @@ ul > li {
 }
 
 .binderTitle{
-    border: solid 1px red;
-    background-color: red;
+    border: solid 5px #887780;
+    background-color: #96858f;
 }
 
 .binderBody{
@@ -57,31 +54,74 @@ ul > li {
 }
 
 .binderWrap{
-    background-color: white;
+    background-color: #d5d5d5;
+     width: 90%;
 }
 
 .tabWrap{
-    background-color: yellow;
+    background-color: #9099a2;
     width: 95%;
+    margin-left: 5%;
 }
 
 .tabTitle{
-    border: solid 1px orange;
+    border-top: solid 3px #75818a;
     
 }
 
 .tabBody{
+    #width: 95%;
     #border: solid 1px magenta;
 }
 
 .pageBody{
-    border: 1px solid green;
-    background-color: lightblue;
-    width: 95%;
+    border: 1px solid #696969;
+    background-color: #d5d5d5;
+    width: 98%;
     display: inline-block;
 }
 
-.pageLink, .page-btn, .btn-div{
+.pageLink, .page-btn, .modify-div{
     display: inline-block;
 }
 
+.add-btn.btn  {
+    #margin-left: 5%;
+    padding: 0;
+    width: 100%;
+}
+
+.add-btn-binder  {
+    #margin-left: 5%;
+    padding: 0;
+    width: 90%;
+}
+
+.pageLink{
+    padding-left: 5%;
+    font-size: 1rem;
+    color: black;
+}
+
+.tabLink{
+    padding-left: 3%;
+    font-size: 1.5rem;
+    color: black;
+}
+.binderLink{
+    padding-left: 3%;
+    font-size: 1.75rem;
+    color: black;
+}
+
+.navbar-btn {
+    margin: 1%;
+}
+
+.edit-btn {
+    background-color: blue;
+}
+
+.delete-btn {
+    background-color: red;
+}
