--- a/client/src/assets/css/video.css
+++ b/client/src/assets/css/video.css
@@ -30,7 +30,7 @@
     height: 90%;
     padding-bottom: 0;
     position: relative;
-    top: -10%;
+    top: -3vh;
 }
 
 .video-container#video-container .row form{
@@ -137,6 +137,8 @@ button.close {
 }
 .iframe-wrapper {
     height: 100%;
+    position: relative;
+    top: -4vh;
 }
 .row {
     margin-bottom: 0;
@@ -156,7 +158,7 @@ button.close {
 }
 .arrow-container {
     position: absolute;
-    top: 5px;
+    top: 4vh;
     right: 5px;
     z-index: 3000;
     cursor: pointer;
@@ -178,4 +180,7 @@ button.close {
 }
 #youtube-play {
     padding: 0px 5px;
+}
+.red-text {
+    color: red;
 }
